--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
   "license": "ISC",
   "dependencies": {
     "@types/validator": "^13.11.10",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "http-status": "^1.7.4",
     "joi": "^17.13.1",
     "mongoose": "^8.3.5",
     "validator": "^13.12.0",
@@ -28,6 +30,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.2.0",
+    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^20.12.12",
